Fixed styling for no matching items message. Added obserable for all todos. Updated subscription for todos-footer to use all todos to base visibility on.

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -110,6 +110,7 @@ body {
 	position: relative;
 	z-index: 2;
 	border-top: 1px solid #e6e6e6;
+	overflow: auto;
 }
 
 .toggle-all {
